--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MoviesApp</string>
+    <string name="popular_filter_icon_text">Popular</string>
+    <string name="top_rated_filter_icon_text">Top Rated</string>
+    <string name="Airing_today_filter_icon_text">Airing Today</string>
 </resources>
